--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "watch-css": "npx tailwindcss -i ./styles/styles.css -o ./styles/index.css --watch"
   },
   "dependencies": {
     "next": "12.2.3",
@@ -17,8 +18,12 @@
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
