--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "watch-css": "npx tailwindcss -i ./styles/styles.css -o ./styles/index.css --watch"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll": "^1.8.4",
     "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
