send grid added

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "watch-css": "npx tailwindcss -i ./styles/styles.css -o ./styles/index.css --watch"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "mailgun-js": "^0.22.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
